--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 class="title">HTML & CSS の開発環境を用意しよう！</h1>
-    <p>自分のPCでWebページを開発する方法を学習しましょう</p>
+  <p class="ppp">自分のPCでWebページを開発する方法を学習しましょう</p>
     <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
   </body>
 </html>
